fix: not resolve's job to reject edits